--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>web-hello</title>
+    <title>Fã ou Hater?</title>
   </head>
   <body>
     <div id="root"></div>
